section discuss some html css js added and edited

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
             <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
                 <div class="flex flex-col lg:flex-row justify-center lg:gap-4 space-y-3 lg:space-y-0">
                     <!-- section post-before-mark start -->
-                    <div class="post-before-mark flex bg-[#797DFC1A] w-full p-2 rounded-3xl  lg:w-[60%] lg:flex-1">
-                        <div id="post-before-mark-container">
-                            <div class="flex">
+                    <div class="post-before-mark flex  w-full p-2 rounded-3xl  lg:w-[60%] lg:flex-1">
+                        <div id="post-before-mark-container" class="space-y-2">
+                            <div class="flex bg-[#797DFC1A]">
                                 <div class="">
                                     <div class="w-[50%] lg:w-[40%]">
                                         <div class="max-w-3 min-h-3 lg:max-w-6 lg:min-h-6 rounded-full bg-green-600">
