section discuss html css added and edited

--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
                     <!-- section post-before-mark start -->
                     <div class="post-before-mark flex  w-full p-2 rounded-3xl  lg:w-[60%] lg:flex-1">
                         <div id="post-before-mark-container" class="space-y-2">
-                            <div class="flex bg-[#797DFC1A]">
+                            <div class="flex bg-[#797DFC1A] p-2">
                                 <div class="">
-                                    <div class="w-[50%] lg:w-[40%]">
+                                    <div class="">
                                         <div class="max-w-3 min-h-3 lg:max-w-6 lg:min-h-6 rounded-full bg-green-600">
                                         </div>
-                                        <img class="w-full" src="./images/joinforum.png" alt="">
+                                        <img class="w-[100px] rounded-full" src="./images/joinforum.png" alt="">
                                     </div>
                                 </div>
                                 <div class="divide-y-2 divide-dashed space-y-3">
@@ -294,7 +294,7 @@
             </div>
             <div class="w-[90%] max-w-[1171px] my-0 mx-auto mt-3 md:mt-6 lg:mt-12">
                 <div id="latest-posts-container" class="flex flex-wrap justify-center gap-2">
-                   <!--  <div class="lg:w-[325px]">
+                    <!--  <div class="lg:w-[325px]">
                         <div class="w-full">
                             <img class="w-full" src="./images/joinforum.png" alt="">
                         </div>
