section discuss html css added and edited

--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
                             <div class="flex bg-[#797DFC1A] p-2">
                                 <div class="">
                                     <div class="">
-                                        <div class="max-w-3 min-h-3 lg:max-w-6 lg:min-h-6 rounded-full bg-green-600">
+                                        <div
+                                            class="max-w-3 min-h-3 lg:max-w-6 lg:min-h-6 rounded-full bg-green-600">
                                         </div>
                                         <img class="w-[100px] rounded-full" src="./images/joinforum.png" alt="">
                                     </div>
@@ -162,17 +163,20 @@
                                     <div>
                                         <div class="">
                                             <p class="space-x-3 inter-font text-base font-medium">
-                                                <span># Music</span><span>Author:</span> <span>Awlad Hossain</span>
+                                                <span># Music</span><span>Author:</span> <span>Awlad
+                                                    Hossain</span>
                                             </p>
                                         </div>
                                         <div>
-                                            <h3 id="post-title" class=" mulish font text-xl font-bold">10 Kids Unaware
+                                            <h3 id="post-title" class=" mulish font text-xl font-bold">10 Kids
+                                                Unaware
                                                 of Their
                                                 Halloween
                                                 Constume
                                             </h3>
                                             <p class="inter-font text-base font-normal ">
-                                                It's one things to subject yourself to the Halloween costume mushap
+                                                It's one things to subject yourself to the Halloween costume
+                                                mushap
                                                 because hey
                                                 that's
                                                 your prerogative
@@ -194,7 +198,9 @@
                                                     <img id="eye" src="./images/eye.png" alt="">
                                                 </div>
                                                 <div>
-                                                    <p id="post-view" class=" inter-font text-base font-normal">1568</p>
+                                                    <p id="post-view" class=" inter-font text-base font-normal">
+                                                        1568
+                                                    </p>
                                                 </div>
                                             </div>
                                             <div class="flex flex-col md:flex-row lg:flex-row gap-2">
@@ -210,7 +216,7 @@
                                         </div>
                                         <div class="mt-2">
                                             <button class="mark-btn rounded-full btn-xm
-                                     p-0 py-0 px-0">
+                                 p-0 py-0 px-0">
                                                 <div class="rounded-full"><img class="w-full rounded-full"
                                                         src="./images/email .png" alt=""></div>
                                             </button>
