section discuss some js added

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <!-- section post-before-mark start -->
                     <div class="post-before-mark flex  w-full p-2 rounded-3xl  lg:w-[60%] lg:flex-1">
                         <div id="post-before-mark-container" class="space-y-2">
-                            <div class="flex bg-[#797DFC1A] p-2">
+                            <!-- <div class="flex bg-[#797DFC1A] p-2">
                                 <div class="">
                                     <div class="">
                                         <div
@@ -223,7 +223,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
@@ -248,7 +248,7 @@
                             </div>
                         </div>
                         <!-- section marked post start -->
-                        <div class="single-post flex justify-between bg-white rounded-xl p-2 items-center">
+                        <!-- <div class="single-post flex justify-between bg-white rounded-xl p-2 items-center">
                             <div>
                                 <p id="marked-post-title" class=" mulish-font text-base font-semibold text-black">10
                                     Kids Unaware of
@@ -262,7 +262,7 @@
                                     <p id="marked-post-view" class=" text-black">1568</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- section marked post end -->
                     </div>
                     <!-- section mark end -->
