section search some js added

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 and win and wp forum coffee mug!</p>
                             <div class="bg-white text-center rounded-full "><input id="input-area"
                                     placeholder="Search here anything"
-                                    class=" bg-white rounded-full border-none lg:w-[80%]" type="text"> <button
+                                    class=" bg-white rounded-full border-none lg:w-[80%] text-black" type="text"> <button
                                     id="input-btn"
                                     class="btn-xs sm:btn-sm md:btn-md bg-[#797DFC] text-white rounded-full btn btn-primary">Search</button>
                             </div>
